--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-type": "^21.0.0",
+    "framer-motion": "^12.23.22",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -27,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-sketch-canvas": "^6.2.0",
     "shadcn": "^3.4.0",
+    "sonner": "^2.0.7",
     "supabase": "^2.48.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
@@ -36,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
